--- a/index.html
+++ b/index.html
@@ -531,10 +531,10 @@
 </div>
 </div>
 </footer>
-<script src=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js defer></script>
+<script src=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js></script>
 <script src=js/popup.js defer></script>
 <script src=js/data.js defer></script>
-<script src=js/swiper.js defer></script>
+<script src=js/swiper.js></script>
 <script src=js/script.js></script>
 </body>
 </html>
