--- a/404.html
+++ b/404.html
@@ -7,21 +7,21 @@
 <meta name=description content="We show you this page because we can't find page which you looking for">
 <link rel=stylesheet href=styles/reset.css>
 <link rel=stylesheet href=styles/style.css>
-<link rel=icon type=image/png href=/images/logo-min.png?>
+<link rel=icon type=image/webp href=logo-min.webp?>
 <title>StreamVibe - Error</title>
 </head>
 <body>
 <header>
 <nav class="nav content-wrapper">
 <a href=index.html class=logo>
-<img src=images/logo.png alt="Logo of StreamVibe">
+<img src=images/logo.webp alt="Logo of StreamVibe">
 </a>
 <div class=nav-center>
 <ul class=nav-links>
-<li><a href=index.html class="font-size active">Home</a></li>
-<li><a href=moviesAndShows.html class=font-size>Movies & Shows</a></li>
-<li><a href=support.html class=font-size>Support</a></li>
-<li><a href=subscription.html class=font-size>Subscription</a></li>
+<li><a href=index.html class="font-size active">Головна</a></li>
+<li><a href=moviesAndShows.html class=font-size>Фільми & Серіали</a></li>
+<li><a href=support.html class=font-size>Підтримка</a></li>
+<li><a href=subscription.html class=font-size>Підписка</a></li>
 </ul>
 <form action=# class=search>
 <button type=submit class=icon>
@@ -64,102 +64,14 @@
 </nav>
 </header>
 <main>
-<div class="content-wrapper full-height">
-<h1 class=h1-58>Ми не знайшли сторінку за Вашим запитом :(</h1>
-</div>
+<section class=content-wrapper id=error>
+<h1 class=h1-58>Помилка <span class=error>404</span> Не вдалось знайти сторінку</h1>
+<p class=font-size>
+Сторінка, на яку ви намагаєтесь потрапити, не існує або була переміщена
+</p>
+<a class="btn btn-primary font-size" href=index.html>Повернутись на головну</a>
+</section>
 </main>
-<footer class=bottom-absolute>
-<div class=content-wrapper>
-<div class=top-footer>
-<div class=col>
-<h5>Home</h5>
-<ul>
-<li class=font-size>Categories</li>
-<li class=font-size>Devices</li>
-<li class=font-size>Pricing</li>
-<li class=font-size>FAQ</li>
-</ul>
-</div>
-<div class=col>
-<h5>Movies</h5>
-<ul>
-<li class=font-size>Gernes</li>
-<li class=font-size>Trending</li>
-<li class=font-size>New Release</li>
-<li class=font-size>Popular</li>
-</ul>
-</div>
-<div class=col>
-<h5>Shows</h5>
-<ul>
-<li class=font-size>Gernes</li>
-<li class=font-size>Trending</li>
-<li class=font-size>New Release</li>
-<li class=font-size>Popular</li>
-</ul>
-</div>
-<div class=col>
-<h5>Suppost</h5>
-<ul>
-<li class=font-size>Contact Us</li>
-</ul>
-</div>
-<div class=col>
-<h5>Subscription</h5>
-<ul>
-<li class=font-size>Plans</li>
-<li class=font-size>Features</li>
-</ul>
-</div>
-<div class=col>
-<h5>Connect With Us</h5>
-<div class=container>
-<a href="" class=btn-link>
-<svg height=24 width=24 class="icon-lg icon">
-<use href=images/icons.svg#fb-24 />
-</svg>
-<svg height=20 width=20 class="icon-md icon">
-<use href=images/icons.svg#fb-20 />
-</svg>
-<svg height=20 width=20 class="icon-sm icon">
-<use href=images/icons.svg#fb-20 />
-</svg>
-</a>
-<a href="" class=btn-link>
-<svg height=24 width=24 class="icon-lg icon">
-<use href=images/icons.svg#tw-24 />
-</svg>
-<svg height=20 width=20 class="icon-md icon">
-<use href=images/icons.svg#tw-20 />
-</svg>
-<svg height=20 width=20 class="icon-sm icon">
-<use href=images/icons.svg#tw-20 />
-</svg>
-</a>
-<a href="" class=btn-link>
-<svg height=24 width=24 class="icon-lg icon">
-<use href=images/icons.svg#in-24 />
-</svg>
-<svg height=20 width=20 class="icon-md icon">
-<use href=images/icons.svg#in-20 />
-</svg>
-<svg height=20 width=20 class="icon-sm icon">
-<use href=images/icons.svg#in-20 />
-</svg>
-</a>
-</div>
-</div>
-</div>
-<div class=bottom-footer>
-<p class=font-size>@2023 streamvib, All Rights Reserved</p>
-<div class=container>
-<a href="" class=font-size>Terms of Use</a>
-<a href="" class=font-size>Privacy Policy</a>
-<a href="" class=font-size>Cookie Policy</a>
-</div>
-</div>
-</div>
-</footer>
 <script src=js/script.js></script>
 </body>
 </html>
